--- a/SubtitleBatchRenamer.csproj
+++ b/SubtitleBatchRenamer.csproj
@@ -6,10 +6,19 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <ApplicationIcon>Resources/SBR.ico</ApplicationIcon>
+	<ApplicationIcon>Resources/SBR.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="about.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="language.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
+    <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
