--- a/SubtitleBatchRenamer.csproj
+++ b/SubtitleBatchRenamer.csproj
@@ -9,9 +9,17 @@
 	<ApplicationIcon>Resources/SBR.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Update="about.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="language.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
